--- a/LoopBack/BackendLaptops/public/DiseñoPortalWeb/estilosCarrouselPics.css
+++ b/LoopBack/BackendLaptops/public/DiseñoPortalWeb/estilosCarrouselPics.css
@@ -70,11 +70,11 @@
 .card-link{
     /*width:50%;   despues de darle un width fijo se agrega (margin:auto) para que se centren los elementos
     margin:auto;    ----background: rgba(0,0,0,0.7);le da transparencia al boton*/
-    background: rgba(62, 44, 221, 0.7);
+    background: rgba(51, 98, 160, 0.7);
     color:white;
     padding: 10px 10px;
     cursor:pointer;
-    width:25%;  /*el tamaño en ancho del boton submit-enviar*/
+    width:35%;  /*el tamaño en ancho del boton submit-enviar*/
     border:none;
     border-radius:20px;
     font-size:1.3em;
@@ -92,6 +92,10 @@
 .card-link:hover{
     transform:translateX(10px); /*para que el boton se mueva de arriba abajo --y translateX, es para que se mueva izq-der, el desplazamiento es mayor 20px*/
   }
+
+.card-link span{
+    font-size: 1.4em;
+}
 
 
 /*.carousel .carousel-item img{
