se arreglan algunos estilos css a la pagina de inicio

--- a/Frontend/Angular/FrontendPedidos/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
+++ b/Frontend/Angular/FrontendPedidos/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
@@ -1,4 +1,33 @@
 
+
+
+<body>
+    <div class="menu_bar">
+        <h1 class="logo">Pilot<span>PC</span></h1>
+        <ul>
+        
+            <li>
+                 
+                <a asp-area="" asp-page="/Index"><span><i class="fas fa-home"></i></span>Home</a>
+            </li>
+            <li>
+                <a asp-area="" asp-page="/"><span><i class="fas fa-file-signature"></i></span>Solicitar<br/>Pedido</a>
+            </li>
+            <li>
+                <a asp-area="" asp-page="/"><span><i class="fas fa-user-lock"></i></span>Empleado</a>
+            </li>
+        </ul>
+    </div>
+  
+  </body>
+  
+
+
+
+
+
+
+<!--
 <nav>
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo">Logo</a>
@@ -18,3 +47,4 @@
     <li><a href="collapsible.html">Javascript</a></li>
     <li><a href="mobile.html">Mobile</a></li>
   </ul>
+-->
