--- a/Frontend/Angular/FrontendPedidos/src/app/plantilla/error/error.component.html
+++ b/Frontend/Angular/FrontendPedidos/src/app/plantilla/error/error.component.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>   <!--  -->
-<html lang="es">  <!-- tipo de lenguaje -->
+
+
+<body>   
+    <div class="pic">
     
-</head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="error.component.css">  <!-- para hacer la conexion con estilos.css -->
-    <title>ERROR 404</title> <!--titulo que va dentro de la pestaña del navegador, lo que google usa para identificar las busquedas  -->
-    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <!-- direccion que enlaza a bootstrap con css-->
-</head>
+    <img src="assets/img/Error404.jpg" alt="">
+    </div>
+</body>
+
+ 
