--- a/Frontend/Angular/FrontendPedidos/src/app/plantilla/pie-pagina/pie-pagina.component.html
+++ b/Frontend/Angular/FrontendPedidos/src/app/plantilla/pie-pagina/pie-pagina.component.html
@@ -1,3 +1,64 @@
+
+
+
+
+      
+<!-- FOOTER -->
+
+<footer>
+  <div class="container_footer">
+      <div class="box_footer">
+          <div class="terms1">
+              <h5>Pilot PC</h5>
+              <p>Todos los productos tienen estandares de alta calidad, que garantizan la eficacia del servicio, para una compra con satisfacción garantizada</p>
+          </div>
+      </div>
+
+      <div class="box_footer">
+        <div class="terms2">
+            <h5>Solicita tu pedido:</h5>
+            <div class="historico">
+          <a href="/Personas/1DatosPersonales/Index1"><span><i class="fas fa-file-signature"></i></span>Solicitar Pedido</a>
+          </div>
+        </div>
+    </div>
+
+      <div class="box_footer">
+        <div class="terms3">
+          <h5>Redes sociales</h5>
+         <a href="#"><span><i class="fab fa-whatsapp"></i></span>Whatsapp</a>
+         <a href="#"><span><i class="fab fa-facebook-f"></i></span>Facebook</a>
+         <a href="#"><span><i class="fab fa-instagram"></i></span>Instagram</a>
+         <a href="#"><span><i class="fab fa-twitter"></i></span>Twitter</a>
+        </div>
+      </div>
+  </div>  
+
+    <div class="container">
+        &copy; 2021 - Pilot PC - <a asp-area="" asp-page="/Index">Home</a>
+    </div>      
+  </footer> 
+
+
+
+  <script src="~/lib/jquery/dist/jquery.min.js"></script>
+  <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="~/js/site.js" asp-append-version="true"></script>
+
+  <!-- seccion de productos slider-->
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script src="ProductosSlider.js"></script>
+  
+  <!-- Materialize.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+  
+
+
+
+
+
+<!--
 <footer class="page-footer">
     <div class="container">
       <div class="row">
@@ -23,3 +84,4 @@
       </div>
     </div>
   </footer>
+-->
