--- a/Frontend/Angular/FrontendPedidos/src/app/plantilla/inicio/inicio.component.html
+++ b/Frontend/Angular/FrontendPedidos/src/app/plantilla/inicio/inicio.component.html
@@ -1,5 +1,193 @@
-<h1>aqui
-    VA EL
-    HOME PAGE
-</h1>
-<p>inicio works!</p>
+
+
+<link rel="stylesheet" href="inicio.component.css">
+
+
+ <div class="text-center">
+ <h1 class="display-4">Bienvenido a Pilot PC</h1>
+ <p>Donde todos los productos son de calidad y con precios bajos</p>
+ </div>
+
+<div class="content-all"> 
+ <div class="content-carrousel">
+ <figure><img src="assets/img/carousel1.jpg"></figure>
+ <figure><img src="assets/img/carousel2.jpg"></figure>
+ <figure><img src="assets/img/carousel3.jpg"></figure>
+ <figure><img src="assets/img/carousel4.jpg"></figure>
+ <figure><img src="assets/img/carousel5.jpg"></figure>
+ <figure><img src="assets/img/carousel6.jpg"></figure>
+ <figure><img src="assets/img/carousel7.jpg"></figure>
+ <figure><img src="assets/img/carousel8.jpg"></figure>
+ <figure><img src="assets/img/carousel9.jpg"></figure>
+ <figure><img src="assets/img/carousel10.jpg"></figure>
+ </div>
+</div>
+
+
+ <div class="parrafo1">
+ <p><span>Misión:</span><br>
+PILOT PC, es una empresa 100% colombiana, enfocada a prestar servicios de venta de Laptops, reconocida por la calidad, confiabilidad, precios bajos.
+
+Junto con productos tecnológicos, que cumplen con los más altos estándares de calidad, PILOT PC satisface las necesidades del cliente, contribuyendo a desarrollar grandes beneficios para el cliente. 
+</p>
+ </div>
+
+ <div class="parrafo2">
+ <p><span>Visión:</span><br>
+Ser una empresa referente en el sector de la venta de Laptops. Caracterizada por generar valor, en cada proceso logístico. Ser un lugar agradable para laborar con sentido de pertenencia, logrando para los empleados, bienestar, superación, y proyección de trabajo a largo plazo.
+</p>
+</div>
+
+ <div class="parrafo3">
+ <p><span>Valores Institucionales:</span><br>
+* Calidad
+* Confiabilidad
+* Precios Justos
+* Responsabilidad</p>
+ </div>
+
+
+
+
+
+<!-- SLIDER, UNA IMAGEN PRINCIPAL DOS DE FONDO-->
+<div class="container">
+ <div class="row">
+     <div class="col s12">
+         <h1 class="center-align titulo">*LAPTOPS*</h1>
+
+         <div class="carousel center-align">
+             <div class="carousel-item">
+                 <h2 class="subtitulo">HP Pavilion 14 Pulgadas Intel Core i5 1135G7 -Ram 8GB -SSD 512GB</h2>
+                 <div class="linea-division"></div>
+                 <div class="card-link">
+                     <a href="#"> Comprar</a>
+                   </div>
+                   <div class="card-link">
+                     <a href="#">  Financiar</a>
+                   </div>
+                 <p class="sabor">$ 4.599.000</p>
+                 <img src="assets/img/slider1.jpg" alt="">
+             </div> 
+
+             <div class="carousel-item">
+                 <h2 class="subtitulo">Asus Tuf Gaming F15 FX506 15.6 pulgadas Intel Core i5 8GB - SSD 512GB</h2>
+                 <div class="linea-division"></div>
+                 <div class="card-link">
+                     <a href="#">Comprar</a>
+                   </div>
+                   <div class="card-link">
+                     <a href="#">Financiar</a>
+                   </div>
+                 <p class="sabor">$ 3.499.000</p>
+                 <img src="assets/img/slider2.jpg" alt="">
+             </div> 
+
+             <div class="carousel-item">
+                 <h2 class="subtitulo">Msi katana gf66 i7-11800h rtx 3050  Ram8gb SSD512gb</h2>
+                 <div class="linea-division"></div>
+                 <div class="card-link">
+                     <a href="#">Comprar</a>
+                   </div>
+                   <div class="card-link">
+                     <a href="#">Financiar</a>
+                   </div>
+                 <p class="sabor">$ 6.200.000</p>
+                 <img src="assets/img/slider3.jpg" alt="">
+             </div> 
+
+             <div class="carousel-item">
+                 <h2 class="subtitulo">Acer Triton 500 15.6 Pulgadas Intel Core i7 Ram 32GB -HDD 1TB</h2>
+                 <div class="linea-division"></div>
+                 <div class="card-link">
+                     <a href="#">Comprar</a>
+                   </div>
+                   <div class="card-link">
+                     <a href="#">Financiar</a>
+                   </div>
+                 <p class="sabor">$12.599.000</p>
+                 <img src="assets/img/slider4.jpg" alt="">
+             </div> 
+
+             <div class="carousel-item">
+                 <h2 class="subtitulo">Dell G15 15.6 Pulgadas Ryzen 7 5800h Rtx 3060 Ram 16GB -SSD 512GB</h2>
+                 <div class="linea-division"></div>
+                 <div class="card-link">
+                     <a href="#">Comprar</a>
+                   </div>
+                   <div class="card-link">
+                     <a href="#">Financiar</a>
+                   </div>
+                 <p class="sabor">$ 6.699.000</p>
+                 <img src="assets/img/slider5.jpg" alt="">
+             </div> 
+
+             <div class="carousel-item">
+                 <h2 class="subtitulo">Lenovo Gaming Gtx 1650 4gb - Ci5 10300h Ram 8gb -HDD 1Tb </h2>
+                 <div class="linea-division"></div>
+                 <div class="card-link">
+                     <a href="#">Comprar</a>
+                   </div>
+                   <div class="card-link">
+                     <a href="#">Financiar</a>
+                   </div>
+                 <p class="sabor">$ 3.640.000</p>
+                 <img src="assets/img/slider6.jpg" alt="">
+             </div> 
+
+
+         </div>
+     </div>
+ </div>
+
+</div>
+
+
+
+
+
+<!-- FORMULARIO REGISTRAR DATOS PERSONALES -->
+<form method="post">
+<div class="container">
+<div class="formulario">
+   <h1><span> <i class="fas fa-file-signature"></i></span>Registrar Datos Personales</h1>
+   <br>
+ <div class="block"> 
+ <input type="text" class="formulario__input" id="txtNombres" placeholder="Nombres" required>
+ <input type="text" class="formulario__input" id="txtApellidos" placeholder="Apellidos" required>
+ <input type="text" class="formulario__input" id="txtDireccion" placeholder="Dirección" required>
+ <input type="text" class="formulario__input" id="txtCiudad" placeholder="Ciudad" required>
+ <input type="text" class="formulario__input" id="txtMovil" placeholder="Movil" required>
+ <input type="email" class="formulario__input" id="txtEmail" placeholder="Email" required>
+ <div class="invalid-feedback">
+   Este campo es requerido
+ </div>
+
+ <div class="col-md-6">
+ <label for="inputState" class="form-label"><b>Compra o Finaciación</b></label>
+   <select id="inputState" class="form-select">
+     <option selected>Choose...</option>
+     <option>Comprar</option>
+     <option>Financiar</option>
+   </select>
+ </div>
+
+ <div class="texto"> 
+   <form action="">
+       <p>Su opinión es my importante.</p>
+       <textarea class="estilotexto"style="resize:none;" cols="55" rows="4" placeholder="Escribe aqui tu mensaje"></textarea>
+   </form>
+ </div>
+
+   <div class="row justify">
+     <div class="col">
+         <button type="submit" class="formulario__submit"><span> <i class="fas fa-file-signature"></i></span>Registrar</button> <!-- para que envie datos tiene que ser submit y no bottom -->    
+     </div>
+   </div>
+</div>
+
+</div>
+</div>
+
+
+
