--- a/LoopBack/BackendLaptops/public/DiseñoPortalWeb/estilosCarrouselPics.css
+++ b/LoopBack/BackendLaptops/public/DiseñoPortalWeb/estilosCarrouselPics.css
@@ -47,8 +47,8 @@
 }
 
 .carousel .carousel-item{
-    display:flex;
-    flex-direction:column;
+    display:flex; /*en una caja flex podemos colocar los elementos en cualquier direccion - horizontal o vertical*/
+    flex-direction:column; /*column=vertical    ---   row=horizontal*/
     justify-content: center;
     align-items: center;
 
