--- a/Frontend/Angular/FrontendPedidos/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
+++ b/Frontend/Angular/FrontendPedidos/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
@@ -6,17 +6,28 @@
         <h1 class="logo">Pilot<span>PC</span></h1>
         <ul>
         
-            <li>
-                 
-                <a asp-area="" asp-page="/Index"><span><i class="fas fa-home"></i></span>Home</a>
+            <li *ngIf = "sesionIniciada"> 
+                <a routerLink ="/inicio"><span><i class="fas fa-home"></i></span>Inicio</a>
+             </li>
+            <li *ngIf = "sesionIniciada" > 
+              <a routerLink ="/administracionpersonas">Clientes</a>
+          </li>
+            <li *ngIf = "sesionIniciada">
+                <a routerLink ="/"><span><i class="fas fa-file-signature"></i></span>Solicitar<br/>Pedido</a>
             </li>
-            <li>
-                <a asp-area="" asp-page="/"><span><i class="fas fa-file-signature"></i></span>Solicitar<br/>Pedido</a>
+            <li *ngIf = "sesionIniciada">
+                <a routerLink ="/"><span><i class="fas fa-user-lock"></i></span>Empleado</a>
             </li>
-            <li>
-                <a asp-area="" asp-page="/"><span><i class="fas fa-user-lock"></i></span>Empleado</a>
-            </li>
-        </ul>
+            <li *ngIf = "sesionIniciada">   
+              <a routerLink ="/seguridad/cambioclave">Cambie su Clave</a>
+          </li>
+          <li *ngIf = "sesionIniciada">   
+            <a routerLink ="/seguridad/cerrar-sesion">Cerrar Sesion</a>
+        </li>
+          <li *ngIf = "!sesionIniciada">    
+            <a routerLink ="/seguridad/identificar">Iniciar Sesion</a>
+        </li>
+      </ul>
     </div>
   
   </body>
