--- a/Frontend/Angular/FrontendPedidos/src/app/modulos/seguridad/identificacion/identificacion.component.html
+++ b/Frontend/Angular/FrontendPedidos/src/app/modulos/seguridad/identificacion/identificacion.component.html
@@ -1,56 +1,35 @@
+    <link rel="stylesheet" href="identificacion.component.css">
 
-   <!-- Form Section -->
+    <div className="contenedor">
+        <div className="registrate">
+            <h1>Inicio de Sesion <br/>APP-Pilot PC</h1>
 
-   <!-- <form [formGroup]="fgValidador" (ngSubmit)="IdentificarUsuario()"> -->
-   <form> <!-- Change The Form Method From Here-->
-    <div class="card-panel z-depth-5">
-
-        <!-- Form Logo Section  -->
-
-        <div class="row margin">
-            <div class="col s12 m12 l12 center">
-                <img src="https://i.imgur.com/ypAbAYt.png"
-                 alt="" class="responsive-img circle" style="width:100px;">
-                <p>Inicio de sesion en APP - PEDIDOS</p>
-            </div>
+            <form className="formulario" action="" onSubmit={submit}>
+                <input type="text" name="usuario" id="usuario" placeholder="Usuario" />
+                <input type="password" name="password" id="password" placeholder="Contraseña" />
+                
+                <br>
+                <br>
+                <div className="recaptcha">
+                    <form [formGroup]="fgValidador">
+                        <ngx-recaptcha2 #captchaElem
+                          [siteKey]="siteKey"
+                          formControlName="recaptcha">
+                        </ngx-recaptcha2>
+                      </form>
+                </div>
+                <br>
+                <br>
+                <button type="submit">Ingresar</button>
+            </form>
         </div>
-
-        <!-- Form Username Input Section -->
-
-        <div class="col s12 m12 l12">
-            <div class="input-field">
-                <i class="material-icons prefix">person</i>
-                <input  formControlName = 'usuario' type="text" name="username" id="username">
-                <label for="username">Usuario</label>
-            </div>
+        <div>
+            <h1>¡¡Bienvenido!!</h1>
         </div>
-
-        <!-- Form Password Input Section -->
-
-        <div class="col m12 l12">
-            <div class="input-field">
-                <i class="material-icons prefix">lock</i>
-                <input formControlName = 'clave' type="password" name="password" id="password">
-                <label for="password">Contraseña</label>
-            </div>
-        </div>
-
-
-            <!-- Form Button Section  -->
-
-        <div class="center">
-            <input type="submit" value="Ingresar" name="login" 
-            class="btn waves-effect waves-light " 
-            style="width:100%; background-color: #ff4081;">
-        </div>
-
-            <!-- Form "Register Now" And "Forgot Password" Link Section. -->
-
-        <div class="" style="font-size:14px;"><br>
-            <a href="" class="left">Register Now!</a>
-            <a href="" class="right ">Forgot Password?</a>
-        </div><br>
     </div>
-</form>
+
+
+
+    <script type="text/javascript" src="assets/js/identificacion.js"></script>
 
 
