--- a/Frontend/Angular/FrontendPedidos/src/app/modulos/administracion/productos/buscar-productos/buscar-productos.component.css
+++ b/Frontend/Angular/FrontendPedidos/src/app/modulos/administracion/productos/buscar-productos/buscar-productos.component.css
@@ -1,3 +1,26 @@
 .imagenproducto{
     width:100px;
 }
+
+.table {
+    color:beige;
+    margin-left:3%;
+}
+.btn{
+	background: rgba(51, 98, 160, 0.7);
+    color:white;
+    font-weight: 700; /*grosor-negrita*/
+    cursor:pointer;
+    width:25%;  /*el tamaño en ancho del boton submit-enviar*/
+    border:none;
+    border-radius:20px;
+    font-size:1.3em;
+    margin-left:35%;
+    transition:.5s;
+    margin-top:10px;
+    display:inline-block;
+}
+.btn:hover{
+    transform:translateX(10px); /*para que el boton se mueva de arriba abajo --y translateX, es para que se mueva izq-der, el desplazamiento es mayor 20px*/
+    background:rgba(0,0,0,0.5);
+  }
