--- a/Frontend/Angular/FrontendPedidos/src/app/modulos/seguridad/identificacion/identificacion.component.css
+++ b/Frontend/Angular/FrontendPedidos/src/app/modulos/seguridad/identificacion/identificacion.component.css
@@ -7,7 +7,46 @@
 	box-sizing: border-box;
 }
 
-body {
+.contenedor{
+	width:50%;
+	margin-top:-5%;
+	margin-left:23%;
+}
+.contenedor h1{
+	width:60%;
+	color:beige;
+	text-align: center;
+	margin-left:30%;
+	font-size: 50px;
+}
+.recaptcha{
+	margin-left:30%;
+}
+.material-icons{
+	color:beige;
+}
+.ingresar{
+	background: rgba(51, 98, 160, 0.7);
+    color:white;
+    padding: 10px 10px;
+    cursor:pointer;
+    width:25%;  /*el tamaño en ancho del boton submit-enviar*/
+    border:none;
+    border-radius:20px;
+    font-size:1.3em;
+    margin-left:10%;
+    transition:.5s;
+    margin-top:10px;
+    display:inline-block;
+}
+.ingresar:hover{
+    transform:translateX(10px); /*para que el boton se mueva de arriba abajo --y translateX, es para que se mueva izq-der, el desplazamiento es mayor 20px*/
+	background:rgba(0,0,0,0.5);
+  }
+
+
+
+/*body {
 	background: #f2f2f2;
 	font-family: 'Roboto', sans-serif;
 }
@@ -77,4 +116,4 @@ body {
 .error-captcha {
 	color: red;
 	margin-bottom: 20px;
-}
+}*/
