--- a/Frontend/Angular/FrontendPedidos/src/app/plantilla/inicio/inicio.component.css
+++ b/Frontend/Angular/FrontendPedidos/src/app/plantilla/inicio/inicio.component.css
@@ -9,6 +9,7 @@
     margin:none;
     font-family: 'Open Sans', sans-serif;
     background-image: url(assets/img/background-11.jpg); /*para la imagen estatica de fondo */
+    
     background-size:cover;
     background-attachment:fixed;
     background-repeat: no repeat;         
@@ -244,6 +245,7 @@
 
 /*FORMULARIO DE REGISTRAR DATOS PERSONALES*/
 .formulario{
+      
     background-image: url(assets/img/background-2j.jpg);
     background-size:cover;
     width:100%;
@@ -308,6 +310,24 @@
   .col span{
     margin-right:15px;
   }
+
+  .row-justify{
+      background: rgba(51, 98, 160, 0.7);
+      color:white;
+      padding: 10px 10px;
+      cursor:pointer;
+      width:25%;  /*el tamaño en ancho del boton submit-enviar*/
+      border:none;
+      border-radius:20px;
+      font-size:1.3em;
+      margin-left:10%;
+      transition:.5s;
+      margin-top:10px;
+      display:inline-block;
+  }
+  .row-justify:hover{
+      transform:translateX(10px); /*para que el boton se mueva de arriba abajo --y translateX, es para que se mueva izq-der, el desplazamiento es mayor 20px*/
+    }
 
 
 
